--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -17,7 +17,7 @@ body {
   margin: 0;
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background-color: black;
   line-height: 1.6;
   font-family: var(--font-family);
   font-size: 14px;
