--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,9 +1,10 @@
 :root {
   --color-text: #4e4e4e;
-  --color-background: #999999;
   --font-family: 'Montserrat', sans-serif;
   --dark: #232931;
   --light: #fcfcfc;
+  --icon-dark: #4e4e4e;
+  --icon-light: #c5c5c5;
 }
 
 *,
@@ -18,8 +19,6 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  color: var(--color-text);
-  background-color: black;
   line-height: 1.6;
   font-family: var(--font-family);
   font-size: 14px;
@@ -29,17 +28,13 @@ a {
   text-decoration: none;
 }
 
-.chevron-icon {
-  fill: var(--color-text);
-  cursor: pointer;
-}
+/* button */
 
 .lifeat-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #fcfcfc;
-  border-color: #e9e9e9;
+  border-color: var(--icon-light);
   height: 36px;
   width: 36px;
   padding: 8px;
@@ -47,11 +42,62 @@ a {
   cursor: pointer;
 }
 
+.light .lifeat-btn {
+  background-color: var(--light);
+}
+
+.dark .lifeat-btn {
+  background-color: var(--dark);
+}
+
+/* input slider thumb */
+
 input[type='range']::-webkit-slider-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: var(--color-text);
   cursor: pointer;
   -webkit-appearance: none;
+}
+
+.light input[type='range']::-webkit-slider-thumb {
+  background-color: var(--icon-dark);
+}
+
+.dark input[type='range']::-webkit-slider-thumb {
+  background-color: var(--icon-light);
+}
+
+/* screen */
+
+.screen {
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.screen.light {
+  background-color: var(--light);
+  color: var(--dark);
+}
+
+.screen.dark {
+  background-color: var(--dark);
+  color: var(--light);
+}
+
+/* icons */
+
+.light .volume-icon {
+  fill: var(--icon-dark);
+}
+
+.dark .volume-icon {
+  fill: var(--icon-light);
+}
+
+.light .chevron-icon {
+  fill: var(--icon-dark);
+}
+
+.dark .chevron-icon {
+  fill: var(--icon-light);
 }
