--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -5,6 +5,8 @@
   --light: #fcfcfc;
   --icon-dark: #4e4e4e;
   --icon-light: #c5c5c5;
+  --border-light: #dfdfdf;
+  --border-dark: #454545;
 }
 
 *,
@@ -34,9 +36,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-color: var(--icon-light);
-  height: 36px;
-  width: 36px;
+  min-height: 36px;
+  min-width: 36px;
   padding: 8px;
   border-radius: 7px;
   cursor: pointer;
@@ -44,10 +45,14 @@ a {
 
 .light .lifeat-btn {
   background-color: var(--light);
+  color: var(--dark);
+  border-color: var(--icon-light);
 }
 
 .dark .lifeat-btn {
   background-color: var(--dark);
+  color: var(--light);
+  border-color: var(--icon-dark);
 }
 
 /* input slider thumb */
