--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -7,6 +7,7 @@
   --icon-light: #c5c5c5;
   --border-light: #dfdfdf;
   --border-dark: #454545;
+  --color-active: #e39685;
 }
 
 *,
@@ -105,4 +106,12 @@ input[type='range']::-webkit-slider-thumb {
 
 .dark .chevron-icon {
   fill: var(--icon-light);
+}
+
+.close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  height: 22px;
 }
